[gd_scene load_steps=4 format=3 uid="uid://bsi6wiani5oh3"]

[ext_resource type="Script" uid="uid://dy7q8yerq3xvf" path="res://scripts/pedestre.tres.gd" id="1_2amh1"]
[ext_resource type="PackedScene" uid="uid://kv0l8ikdp6h2" path="res://scenes/stacked_sprite.tscn" id="1_jux3i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jux3i"]
size = Vector2(28, 31)

[node name="Pedestre" type="Area2D"]
position = Vector2(479, 307)
scale = Vector2(5, 5)
script = ExtResource("1_2amh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-4, -9.5)
shape = SubResource("RectangleShape2D_jux3i")

[node name="StackedSprite" parent="." instance=ExtResource("1_jux3i")]
rotate_sprites = true

[node name="visible" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
